Largish update of a variety of issues: Changed the app version to 2 1) fix Issue 5 giving people control of their name via user preferences. 2) cleanup some login code between python & html 3) cleanup html data entry quite a bit 4) css style changed a bit for readability.
git-svn-id: https://stockpredictr.googlecode.com/svn/trunk@6 c17856c4-a0e3-11de-be8d-735280eae207

--- a/stockpredictr/stylesheets/republic/style.css
+++ b/stockpredictr/stylesheets/republic/style.css
@@ -10,7 +10,7 @@ body {
 	background: #F7F7F7 url(images/img01.jpg) repeat-x left top;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
-	color: #787878;
+	color: #383838; /* #787878; */
 }
 
 h1, h2, h3 {
@@ -102,18 +102,19 @@ a:hover {
 /* Search */
 
 #search {
-	float: right;
-	width: 280px;
+	float: left;
+	/*width: 280px;
 	height: 60px;
-	padding: 20px 0px 0px 0px;
+        */
+	padding: 0px 0px 0px 0px;
 	background: #E2E2E2;
 	border-bottom: 4px solid #FFFFFF;
 }
 
 #search form {
-	height: 41px;
+	/*height: 41px;*/
 	margin: 0;
-	padding: 10px 0 0 20px;
+	padding: 10px 10px 10px 10px;
 }
 
 #search fieldset {
@@ -256,6 +257,7 @@ a:hover {
 	padding: 0px 0px 20px 0px;
 	padding-bottom: 20px;
 	text-align: justify;
+	font-size: 13px;
 }
 
 .links {
@@ -270,7 +272,7 @@ a:hover {
 	float: right;
 	width: 280px;
 	padding: 0px;
-	color: #787878;
+	color: #383838; /*#787878;*/
 	background: #FFFFFF;
 }
 
